# yogaboard

./: .gitignore  Makefile  README.md  org.aeracode.yogaboard.desktop  org.aeracode.yogaboard.json  pyproject.toml
layouts/: qwerty-compact.json  qwerty.json  slim.json
resources/: style.css
resources/themes/: dark.css  default.css
yogaboard/: __init__.py  main.py  settings.py
yogaboard/input/: __init__.py  modifier_state.py  touch_handler.py  touchpad_handler.py
yogaboard/input_device/: __init__.py  uinput_keyboard.py  uinput_touchpad.py
yogaboard/layout/: __init__.py  parser.py
yogaboard/ui/: __init__.py  key_button.py  keyboard_widget.py  settings_dialog.py  touchpad_widget.py  window.py
